--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="login-form">
+        <input type="text" placeholder="What is your name?" />
+        <button>Login</button>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
