--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="login-form">
-        <input type="text" placeholder="What is your name?" />
-        <button>Login</button>
-    </div>
+    <form id="login-form">
+        <input 
+            required 
+            maxlength="15" 
+            type="text" 
+            placeholder="What is your name?" 
+        />
+        <input type="submit" value="Login" />
+    </form>
     <script src="app.js"></script>
 </body>
 </html>
