--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         />
         <input type="submit" value="Login" />
     </form>
+    <h1 id="greeting" class="hidden"></h1>
     <script src="app.js"></script>
 </body>
 </html>
