--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form id="login-form">
+    <form class="hidden" id="login-form">
         <input 
             required 
             maxlength="15" 
