--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         />
         <input type="submit" value="Login" />
     </form>
+    <h2 id="clock">00:00</h2>
     <h1 id="greeting" class="hidden"></h1>
-    <script src="app.js"></script>
+    <script src="greeting.js"></script>
+    <script src="clock.js"></script>
 </body>
 </html>
