--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
         <input type="submit" value="Login" />
     </form>
     <h2 id="clock">00:00:00</h2>
-    <h1 id="greeting" class="hidden"></h1>
+    <h1 class="hidden" id="greeting"></h1>
+    <div id="quote">
+        <span></span>
+        <span></span>
+    </div>
     <script src="greeting.js"></script>
     <script src="clock.js"></script>
+    <script src="quotes.js"></script>
 </body>
 </html>
