--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
     <script src="greeting.js"></script>
     <script src="clock.js"></script>
     <script src="quotes.js"></script>
+    <script src="background.js"></script>
 </body>
 </html>
