--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     </form>
     <h2 id="clock">00:00:00</h2>
     <h1 class="hidden" id="greeting"></h1>
+    <form id="todo-form">
+        <input type="text" placeholder="Write a To Do and Press Enter" required />
+    </form>
+    <ul id="todo-list"></ul>
     <div id="quote">
         <span></span>
         <span></span>
@@ -27,5 +31,6 @@
     <script src="clock.js"></script>
     <script src="quotes.js"></script>
     <script src="background.js"></script>
+    <script src="todo.js"></script>
 </body>
 </html>
