--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
     <script src="quotes.js"></script>
     <script src="background.js"></script>
     <script src="todo.js"></script>
+    <script src="weather.js"></script>
 </body>
 </html>
