--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <span></span>
         <span></span>
     </div>
+    <div id="weather">
+        <span></span>
+        <span></span>
+    </div>
     <script src="greeting.js"></script>
     <script src="clock.js"></script>
     <script src="quotes.js"></script>
